--- a/InternetSatusExemplo/InternetSatusExemplo/MainPage.xaml
+++ b/InternetSatusExemplo/InternetSatusExemplo/MainPage.xaml
@@ -2,10 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:InternetSatusExemplo"
-             x:Class="InternetSatusExemplo.MainPage">
+             x:Class="InternetSatusExemplo.MainPage" Padding="0,20,0,0">
 
-	<Label Text="Welcome to Xamarin.Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+	<Label x:Name="lblConexao" Text="Verifique a sua conexão"  />
+    <Button x:Name="btnTeste" Text="Testar conexão"></Button>
 
 </ContentPage>
