--- a/InternetSatusExemplo/InternetSatusExemplo/MainPage.xaml
+++ b/InternetSatusExemplo/InternetSatusExemplo/MainPage.xaml
@@ -1,10 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:InternetSatusExemplo"
              x:Class="InternetSatusExemplo.MainPage" Padding="0,20,0,0">
 
-	<Label x:Name="lblConexao" Text="Verifique a sua conexão"  />
-    <Button x:Name="btnTeste" Text="Testar conexão"></Button>
+    <StackLayout>
+    	<Label x:Name="lblConexao" Text="Verifique a sua conexão"  />
+        <Button x:Name="btnTeste" Text="Testar conexão"></Button>
+   </StackLayout>
 
 </ContentPage>
